--- a/org.backmeup.embedded/pom.xml
+++ b/org.backmeup.embedded/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>app</artifactId>
 		<groupId>org.backmeup</groupId>
-		<version>0.0.1</version>
+		<version>1.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>embedded</artifactId>
 	<name>Embedded REST Webserver</name>
