--- a/org.backmeup.rest/pom.xml
+++ b/org.backmeup.rest/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
 		<artifactId>app</artifactId>
 		<groupId>org.backmeup</groupId>
-		<version>0.0.1</version>
+		<version>1.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>rest</artifactId>
 	<!-- <packaging>war</packaging> -->
