--- a/org.backmeup.utilities/pom.xml
+++ b/org.backmeup.utilities/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.backmeup</groupId>
 		<artifactId>app</artifactId>
-		<version>0.0.1</version>
+		<version>1.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>utilities</artifactId>
 	<repositories>
