--- a/plugins/org.backmeup.dummy/pom.xml
+++ b/plugins/org.backmeup.dummy/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.backmeup</groupId>
     <artifactId>plugins</artifactId>
-    <version>0.0.1</version>
+    <version>1.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>dummy</artifactId>
   <packaging>bundle</packaging>
