--- a/plugins/org.backmeup.twitter/src/main/resources/twitter.properties
+++ b/plugins/org.backmeup.twitter/src/main/resources/twitter.properties
@@ -1,3 +1,3 @@
-app.key = Ce9O9IkWyOeNuBEV3vyRUw
-app.secret = rG0gIW2LG66liJ04h2aD3zNTt06U8gwRAVwdklXoI
+app.key = enterkeyhere
+app.secret = entersecretkeyhere
 
