--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,14 @@
 	<artifactId>app</artifactId>
 	<version>1.0.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
+
 	<properties>
 		<weld.version>1.1.8.Final</weld.version>
                 <jersey.version>1.12</jersey.version>
-                <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <encoding>UTF-8</encoding>
+        <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>
+        <project.build.java.target>1.6</project.build.java.target>
 	</properties>
 	<modules>
 		<!-- build the interfaces + model first -->
@@ -58,8 +62,9 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.2</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+                    <source>${project.build.java.target}</source>
+                    <target>${project.build.java.target}</target>
+                    <encoding>${project.build.sourceEncoding}</encoding>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -68,9 +73,28 @@
 				<version>2.5</version>
 				<configuration>
 					<!-- specify UTF-8, ISO-8859-1 or any other file encoding -->
-					<encoding>UTF-8</encoding>
+					<encoding>${project.build.sourceEncoding}</encoding>
 				</configuration>
 			</plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.2</version>
+                <!--
+                <configuration>
+                    <failOnWarning>true</failOnWarning>
+                </configuration>
+                -->
+                <executions>
+                     <execution>
+                         <id>check-dependencies</id>
+                         <phase>verify</phase>
+                         <goals>
+                             <goal>analyze</goal>
+                         </goals>
+                     </execution>
+                 </executions>
+             </plugin>
 		</plugins>
 	</build>
 </project>
